--- a/ecommerce/product/templates/product/dashboard.html
+++ b/ecommerce/product/templates/product/dashboard.html
@@ -1,36 +1,22 @@
 {% extends "base.html" %}
 {% load static %}
+{% load mathfilters %}
 
 {% block title %} {{ title }} {% endblock title %}
 
 {% block body %}
 
 
-<div class="header-below"> 
 
-    <div class="container ">
 
-      <!-- <div class="row"> -->
-  
-        <div class="col-2  ">
-          <h1>
-            Best Ecommerce Site !
-          </h1>
-          <p>
-            An e-commerce website is one that allows people to buy and sell physical goods, services, and digital products over the internet rather than at a brick-and-mortar location. Through an e-commerce website, a business can process orders, accept payments, manage shipping and logistics, and provide customer service.
-          </p>  <br> <br>
-         
-        </div>
-       
-      <!-- </div> -->
-  
-  
-    </div>
+{{ block.super }}
+
+
+
      
 
 
 
-   </div>
  
   <div class="bg-color">   <br>
 
@@ -40,13 +26,19 @@
 
         <h2 class="title">Category Products</h2>
         <div class="row bg-product">
+
+          {% for category_product in category_products %}
+             
+          
   
 
 
  
           <div class="col-3 ">
+            <img src="{{ category_product.image.url }}" alt="" />
 
-            <div class="category-content"> <br> <br>
+
+            <!-- <div class="category-content"> <br> <br>
               <h2> Pants </h2>
               <b>  Bondage Pants    </b> <br>
               <b>  Fisherman Pants    </b>  <br>
@@ -55,15 +47,14 @@
               <b>  Jeans Pants    </b>  <br>
               <b>  Overalls Pants    </b>  <br>
               
+            </div> -->
 
-              
-  
-            </div>
-          
 
-            <img src="images/category-1.jpg" alt="" />
+            <!-- <img src="images/category-1.jpg" alt="" /> -->
           </div>
-          <div class="col-3">
+
+          {% endfor %}
+          <!-- <div class="col-3">
 
             <div class="category-content"> <br> <br>
               <h2> SHOES </h2>
@@ -77,8 +68,8 @@
   
             </div>
             <img src="images/category-2.jpg" alt="" />
-          </div>
-          <div class="col-3">
+          </div> -->
+          <!-- <div class="col-3">
 
             <div class="category-content"> <br> <br>
               <h2> T-SHIRT </h2>
@@ -92,7 +83,7 @@
   
             </div>
             <img src="images/category-3.jpg" alt="" />
-          </div>
+          </div> -->
         </div>
       </div>
     </div> <br>
@@ -181,7 +172,11 @@
                   <h3>{{ product.name }}</h3>
                   <p> {{product.description}}</p>
                 
-                  <h4> <b> Rs : {{product.price}} </b></h4>
+                  <h4> <b> Rs : {{product.price}} &nbsp;&nbsp;&nbsp;<del> {{product.actual_price   }}</del>  </b>  </h4>
+
+                  <h4> <b  class="discount" > Discount : {{product.actual_price|sub:product.price|mul:100|div:product.actual_price|floatformat}} % </b>  </h4>
+
+                  <!-- <h4> <b> stock : { {product.stock}} </b></h4> -->
 
               
               </a>
