--- a/ecommerce/product/templates/product/show_cart.html
+++ b/ecommerce/product/templates/product/show_cart.html
@@ -1,30 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
+{% load mathfilters %}
 
 {% block title %} {{ title }} {% endblock title %}
 
 {% block body %}
 
-    <div class="header-below"> 
-
-        <div class="container ">
-
-        <!-- <div class="row"> -->
-    
-            <div class="col-2  ">
-            <h1>
-                Best Ecommerce Site !
-            </h1>
-            <p>
-                An e-commerce website is one that allows people to buy and sell physical goods, services, and digital products over the internet rather than at a brick-and-mortar location. Through an e-commerce website, a business can process orders, accept payments, manage shipping and logistics, and provide customer service.
-            </p>  <br> <br>
-            
-            </div>
-        
-          <!-- </div> -->
-    
-    
-        </div>
+{{ block.super }}
 
     </div>
  
@@ -33,52 +15,81 @@
 
     
 
-            <div class="small-container">
-            
+        <div class="small-container">
+     
 
 
-                    
-                <h2 class="title">SHOW ADD CART PRODUCT</h2>
-                <div class="row bg-product">
-                    {% for product in cart_queryset %} 
+            {% if cart_queryset %} 
+            <h2 class="title">Latest Products</h2>
+            <div class="row bg-product">
 
-                        <div class="col-4">
-                        <div class="detail-content"> <br> <br>
-                            <h3> {{ product }} </h3>
-                            <b> stock :  </b> {{product.stock}}  <br>
-                            <b> Price :  </b> {{product.product_property.price }}  <br>
 
-                        </div>
+                {% for product in cart_queryset %} 
 
-                        <img src="{{ product.product_property.image.url  }}" alt="" />
-                        <h3>{{ product.product_property.name }}</h3>
-                        <p> {{product.product_property.description}}</p>
-                        
-                        <h4> <b> Rs : {{product.product_property.price}} </b></h4>
-                        
-
-                        <a href="{% url 'remove_item' id=product.id  %}"><button>  Remove Item </button></a>
-                        </div>
-
+                <div class="col-4">
+                <div class="detail-content"> <br> <br>
+                    <h3> {{ product }} </h3>
+                    <b> stock :  </b> {{product.stock}}  <br>
+                    <b> Price :  </b> {{product.product_property.price }}  <br>
 
                 </div>
 
-                <div class="price_show"> 
-                    <h3> Total Amount    :   ₹ {{total_price}} </h3>
-                    <a href="{% url 'order_item' amount=total_price %}"> <button> PLACE ORDER </button></a> <br> <br>
-                </div> 
+                <img src="{{ product.product_property.image.url  }}" alt="" />
+                <h3>{{ product.product_property.name }}</h3>
+                <p> {{product.product_property.description}}</p>
+                
+
+                <h4> <b> Rs : {{product.product_property.price}} &nbsp;&nbsp;&nbsp;<del> {{product.product_property.actual_price   }}</del>  </b>  </h4>
+
+                <h4> <b  class="discount" > Discount : {{product.product_property.actual_price|sub:product.product_property.price|mul:100|div:product.product_property.actual_price|floatformat}} % </b>  </h4> <br>
+
+                
+
+                <a href="{% url 'remove_item' id=product.id  %}"><button  class="btn btn-danger">  Remove Item </button></a>
+                </div>
 
                 {% endfor %}
-                
-                
-            </div> <br> <br>
 
-    </div>
+
+        </div>
+        
+
+            <div class="price_show"> 
+                <h3> Total Amount    :   ₹ {{total_price}} </h3>
+                <a href="{% url 'order_item' amount=total_price %}"> <button class="btn btn-success"> PLACE ORDER </button></a> <br> <br>
+            </div> 
+
+        
+        
+        {% else %} 
+        
+        <h2 class="title">CART ITEMS IS NOT AVAILABLE  </h2>
+        {% endif %}
+
+           
+       
+        
+
+
+
+                
+
+            </div> <br> <br>
+            
+        
+        </div> 
+
 
 
 
 
 {% endblock body%}
+
+
+
+
+
+
 
 
 
