--- a/ecommerce/product/templates/product/show_product.html
+++ b/ecommerce/product/templates/product/show_product.html
@@ -1,73 +1,55 @@
 {% extends "base.html" %}
 {% load static %}
+{% load mathfilters %}
 
 {% block title %} {{ title }} {% endblock title %}
 
 {% block body %}
 
-    <div class="header-below"> 
-
-        <div class="container ">
-
-        <!-- <div class="row"> -->
-    
-            <div class="col-2  ">
-            <h1>
-                Best Ecommerce Site !
-            </h1>
-            <p>
-                An e-commerce website is one that allows people to buy and sell physical goods, services, and digital products over the internet rather than at a brick-and-mortar location. Through an e-commerce website, a business can process orders, accept payments, manage shipping and logistics, and provide customer service.
-            </p>  <br> <br>
-            
-            </div>
-        
-          <!-- </div> -->
-    
-    
-        </div>
-
-    </div>
+{{ block.super }}
  
     <div class="bg-color">   <br>
 
 
     
 
-    <div class="small-container">
+        <div class="small-container">
      
 
 
             
-        <h2 class="title">Latest Products</h2>
-        <div class="row bg-product">
-            {% for product in show_products_property %} 
+            <h2 class="title">Latest Products</h2>
+            <div class="row bg-product">
+                {% for product in show_products_property %} 
 
-                <div class="col-4">
-                <!-- <div class="detail-content"> <br> <br>
-                    <h3> {{ product.name }} </h3>
-                    <b> stock :  </b> {{product.stock}}  <br>
-                    <b> Price :  </b> {{product.price}}  <br>
+                    <div class="col-4">
+                    <!-- <div class="detail-content"> <br> <br>
+                        <h3> {{ product.name }} </h3>
+                        <b> stock :  </b> {{product.stock}}  <br>
+                        <b> Price :  </b> {{product.price}}  <br>
 
-                </div> -->
+                    </div> -->
 
-                <img src="{{ product.image.url  }}" alt="" />
-                <h3>{{ product.name }}</h3>
-                <p> {{product.description}}</p>
+                    <img src="{{ product.image.url  }}" alt="" />
+                    <h3>{{ product.name }}</h3>
+                    <p> {{product.description}}</p>
+                    <!-- <h4> <b> stock : {{product.stock}} </b></h4> -->
+                    
+                  <h4> <b> Rs : {{product.price}} &nbsp;&nbsp;&nbsp;<del> {{product.actual_price   }}</del>  </b>  </h4>
+
+                  <h4> <b  class="discount" > Discount : {{product.actual_price|sub:product.price|mul:100|div:product.actual_price|floatformat}} % </b>  </h4> <br>
+                  
+                    
+
+                    <a href="{% url 'add_cart' id=product.id  show_product_id=show_product_id %}"><button class="btn btn-primary">  Add To Cart </button></a>
+                    </div>
+
+
+                {% endfor %}
                 
-                <h4> <b> Rs : {{product.price}} </b></h4>
-                
-
-                <a href="{% url 'add_cart' id=product.id  show_product_id=show_product_id %}"><button>  Add To Cart </button></a>
-                </div>
-
-
-            {% endfor %}
-            
-
+            </div> <br> <br>   
+        
         </div> <br> <br>
-        
-        
-    </div> <br> <br>
 
 
 
