--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -16,6 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,300&display=swap" rel="stylesheet"> 
 
     {% block custom_css %} 
+       <!-- CSS only -->    
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+       <!-- JavaScript Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+
 
         <link rel="stylesheet" href="{% static 'user/css/style.css' %}" />
 
@@ -23,44 +30,77 @@
 
   </head>
   <body>
-   <!-- <div class="container"> -->
+    
+    {% block body %}  
 
-    {% block navbar %} 
 
-
-            <div class="header">
-                <div class="container">
+    <div class="container">
+        <div class="header fixed-top">
+          <div class="container">
                 <div class="navbar">
-                    <div class="logo">
-                    <a href="index.html">
-                        <img src="{% static 'user/images/logo5.png'%}" alt="" width="125px"
-                    /></a>
+
+                    <div class="logo"  >
+                        <a href="{% url 'dashboard' %}">
+                        <img src="{% static 'user/images/logo5.png'%}" alt="" width="125px"/></a>
                     </div>
                     <nav>
-                    <ul id="MenuItems">
-                        <li><a href="{% url 'dashboard' %}">Home</a></li>
-                        <li><a href="#product">Products</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="#account">Account</a></li>
-                        <li><a href="{% url 'show_order_item' %}">Order</a></li>
-                        <li><a href="{% url 'show_cart' %}">Cart</a></li>
-                    
-                    </ul>
+                      <ul id="MenuItems">
+                          <li><a href="{% url 'dashboard' %}">Home</a></li>
+                          <li><a href="#product">Products</a></li>
+                          <li><a href="#">About</a></li>
+                          <li><a href="#contact">Contact</a></li>
+                      
+                          <li><a href="{% url 'show_order_item' %}">Order</a></li>
+                          <li><a href="{% url 'show_cart' %}">Cart</a></li>
+
+                          <li>
+                            
+                            <!-- <a href="#account">Account</a> -->
+
+                            <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Account
+                              </a>
+                              <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+                                <li><a class="dropdown-item" href="#">Show History</a></li>
+                                <li><hr class="dropdown-divider"> </li>
+                                <li><a class="dropdown-item" href="{% url 'log_out' %}">SignOut</a></li>
+                              </ul>
+                            </li>
+                          
+                          </li>
+                      
+                      </ul>
                     </nav>
             
                 </div>
-                </div>
-            </div>
-        
-            
-            
-    
-    {% endblock navbar %}
+          </div>
+    </div>
+  </div>  
 
-    {% block body %}
+     <div class="header-below">   
+
+
+          <div class="container ">
+
+            <!-- <div class="row"> -->
+        
+                <div class="col-2  ">
+                <h1>
+                    Best Ecommerce Site !
+                </h1>
+              <br> <br>
+                
+                </div>
+            
+              <!-- </div> -->
     
+            </div>
     
+        <!-- </div> -->
+      
+    </div>
     
     {% endblock body %}
   
