--- a/ecommerce/user/templates/user/profile.html
+++ b/ecommerce/user/templates/user/profile.html
@@ -19,7 +19,9 @@
 
             
             <h2 class="title">Profile </h2>
-            <div class="row bg-product">
+            <div class="row bg-product" id="messages">
+
+                {% include 'messages.html' %}
 
                 <div class="profile-image">
 
