--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -6,7 +6,7 @@
   <head>
     {% load static %}
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> {% block title %} Ecommerce Website {% endblock title %}</title>
     
 
@@ -22,9 +22,10 @@
        <!-- JavaScript Bundle with Popper -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-
+      
 
         <link rel="stylesheet" href="{% static 'user/css/style.css' %}" />
+
 
     {% endblock custom_css%}
 
@@ -34,50 +35,65 @@
     {% block body %}  
 
 
-    <div class="container">
-        <div class="header fixed-top">
-          <div class="container">
-                <div class="navbar">
-
-                    <div class="logo"  >
-                        <a href="{% url 'dashboard' %}">
-                        <img src="{% static 'user/images/logo5.png'%}" alt="" width="125px"/></a>
-                    </div>
-                    <nav>
-                      <ul id="MenuItems">
-                          <li><a href="{% url 'dashboard' %}">Home</a></li>
-                          <li><a href="#product">Products</a></li>
-                          <li><a href="#">About</a></li>
-                          <li><a href="#contact">Contact</a></li>
-                      
-                          <li><a href="{% url 'show_order_item' %}">Order</a></li>
-                          <li><a href="{% url 'show_cart' %}">Cart</a></li>
-
-                          <li>
-                            
-                            <!-- <a href="#account">Account</a> -->
-
-                            <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Account
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-                                <li><a class="dropdown-item" href="#">Show History</a></li>
-                                <li><hr class="dropdown-divider"> </li>
-                                <li><a class="dropdown-item" href="{% url 'log_out' %}">SignOut</a></li>
-                              </ul>
-                            </li>
-                          
-                          </li>
-                      
-                      </ul>
-                    </nav>
+  <div class="container"> 
+  
             
-                </div>
-          </div>
-    </div>
-  </div>  
+                <nav class="navbar navbar-expand-lg header fixed-top" >
+                    <div class="container-fluid">
+                    <!-- <a class="navbar-brand" href="{% url 'dashboard' %}">Home </a> -->
+
+                      <div class="logo"  >
+
+                        <a class="navbar-brand" href="{% url 'dashboard' %}">
+                        <img src="{% static 'user/images/logo5.png'%}" alt="" width="125px"/></a>
+                      </div>
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
+                       
+
+                              <li  class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'dashboard' %}">Home</a></li>
+                              <li  class="nav-item"><a class="nav-link active "href="#product">Products</a></li>
+                              <li  class="nav-item"><a class="nav-link active" href="#">About</a></li>
+                              <li  class="nav-item"><a class="nav-link active" href="#contact">Contact</a></li>
+                          
+                              <li  class="nav-item"><a class="nav-link active" href="{% url 'show_order_item' %}">Order</a></li>
+                              <li  class="nav-item"><a class="nav-link active" href="{% url 'show_cart' %}">Cart</a></li>
+
+                              <li>
+                                
+                              
+                                <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle active " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Account
+                                  </a>
+                                  <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'user_order_history' %}">Show History</a></li>
+                                    <li><hr class="dropdown-divider"> </li>
+                                    <li><a class="dropdown-item" href="{% url 'log_out' %}">SignOut</a></li>
+                                  </ul>
+                                </li>
+                              
+                              </li>
+
+                        </ul>
+
+                        <!-- <form  method="POST" action="" class="d-flex" role="search">
+                            {% csrf_token %}
+                        <input class="form-control me-2" name="search_user" type="search" placeholder="Search User" aria-label="Search">
+                        <input  class="btn btn-outline-success" type="submit" value = "Search">
+                        </form> -->
+                    </div>
+                    </div>
+                </nav>
+
+  
+</div>
+
 
      <div class="header-below">   
 
@@ -101,16 +117,37 @@
         <!-- </div> -->
       
     </div>
+
+
+
+    <!-- Optional Javascript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
     
     {% endblock body %}
+
+
+
+
+
+   
+
+
+  
+
+
   
 
   
 
-  
-
-
-  <!-- <script type="text/javascript" src="main.js"></script> -->
 
 
 
