--- a/ecommerce/user/static/user/css/style.css
+++ b/ecommerce/user/static/user/css/style.css
@@ -2,6 +2,7 @@ body{
 
   font-family: 'Poppins', sans-serif;
   background-color: blueviolet;
+  
 
 }
 
@@ -141,12 +142,12 @@ p {
   min-width: 200px;
   margin-bottom: 50px;
   position: relative;
- 
   transition: transform 0.5s;
 }
 
-.col-4 img {
+.col-4 img{
   width: 100%;
+  height: 300px;
 }
 
 
@@ -248,12 +249,6 @@ ul {
   margin-left: 20px;
   display: none;
 } */
-
-
-
-
-
-
 
 
 #loader {
@@ -379,7 +374,9 @@ form a {
 
 .col-4:hover .detail-content {
   width:93%;
-  height: 73%;
+  /* height: 73%; */
+  height: 300px;
+
   background:#F98A8A;
   opacity: 0.9;
   position:absolute;
@@ -478,4 +475,12 @@ a{
   width: 100%;
   
    
+}
+
+#messages{
+
+  /* margin-left: 50%; */
+  /* text-align: center; */
+  
+
 }
