--- a/ecommerce/user/templates/user/account.html
+++ b/ecommerce/user/templates/user/account.html
@@ -16,6 +16,10 @@
 
         <div class="account-page" id="account">
             <div class="container">
+                {% include 'messages.html' %}
+
+
+
             <div class="row">
                 <!-- <div class="col-2">
                 <img src="{% static 'user/images/ecomerce.png'%}" width="50%" />
