--- a/ecommerce/product/templates/product/dashboard.html
+++ b/ecommerce/product/templates/product/dashboard.html
@@ -10,9 +10,6 @@
 {{ block.super }}
 
   <div class="bg-color">   <br>
-
-
-    
     {% include 'messages.html' %}
 
 
@@ -101,200 +98,28 @@
              
             </div>
         {% endfor %}
+        </div>
         
-        <!-- <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Red T-Shirt </h3>
-            <b> Pices :  </b> 40 <br>
-            <b> Price :  </b> 50 <br>
-
-          </div>
-
-          <img src="images/product-5.jpg" alt="" />
-          <h4>Red    T-shirt</h4>
-         
-          <p>Rs 50.00</p>
-        </div>
-
-        <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Red T-Shirt </h3>
-            <b> Pices :  </b> 40 <br>
-            <b> Price :  </b> 50 <br>
-          </div>
-
-          <img src="images/product-6.jpg" alt="" />
-          <h4>Red    T-shirt</h4>
-          
-          <p>Rs 50.00</p>
-        </div>
-
-        <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Red T-Shirt </h3>
-            <b> Pices :  </b> 40 <br>
-            <b> Price :  </b> 50 <br>
-     
-
-          </div> 
-
-
-          <img src="images/product-7.jpg" alt="" />
-          <h4>Red    T-shirt</h4>
-          
-          <p>Rs 50.00</p>
-        </div>
-        <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Red T-Shirt </h3>
-            <b> Pices :  </b> 40 <br>
-            <b> Price :  </b> 50 <br>
-     
-
-          </div>
-          <img src="images/product-8.jpg" alt="" />
-          <h4>Red    T-shirt</h4>
-          
-          <p>Rs 50.00</p>
-        </div>
-      </div> -->
-
-
-
-
-
-      <!-- <div class="row bg-product">
-        <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Red T-Shirt </h3>
-            <b> Pices :  </b> 40 <br>
-            <b> Price :  </b> 50 <br>
-     
-
-          </div> 
-          <img src="images/product-9.jpg" alt="" />
-          <h4>Red    T-shirt</h4>
-        
-          <p>Rs 50.00</p>
-        </div>
-
-        <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Red T-Shirt </h3>
-            <b> Pices :  </b> 40 <br>
-            <b> Price :  </b> 50 <br>
-     
-
-          </div>
-          <img src="images/product-10.jpg" alt="" />
-          <h4>Red    T-shirt</h4>
-          
-          <p>Rs 50.00</p>
-        </div>
-
-        <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Red T-Shirt </h3>
-            <b> Pices :  </b> 40 <br>
-            <b> Price :  </b> 50 <br>
-     
-
-          </div>
-          <img src="images/product-11.jpg" alt="" />
-          <h4>Red    T-shirt</h4>
-          <p>Rs 50.00</p>
-        </div>
-        <div class="col-4">
-          <div class="detail-content"> <br> <br>
-            <h3> Pants </h3>
-            <b> Pices :  </b> 170 <br>
-            <b> Price :  </b> 55 <br>
-     
-
-          </div>
-          <img src="images/product-12.jpg" alt="" />
-          <h4>Pant</h4>
-          
-          <p>Rs 150.00</p>
-        </div>
-      </div> -->
+      
     </div> <br> <br>
 
 
 
 
 
+
+
+
+    
    
- 
-
 {% endblock body%}
-
-
 
 
 {% block footer %}
 
-<!-- Footer -->
-
-
-  <div class="footer" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="footer-col-1">
-          <h3>Download Our App</h3>
-          <p>
-            Download App for Android <br />
-            and ios mobile phone
-          </p>
-          <!-- <div class="app-logo">
-            <img src="images/play-store.png" alt="" />
-            <img src="images/app-store.png" alt="" />
-          </div> -->
-        </div>
-        <div class="footer-col-2">
-          <img src="images/logo2.png" alt="" />
-          <p>
-            An e-commerce website is one that allows people to buy and sell physical goods, services, and digital products over the internet rather than at a brick-and-mortar location. Through an e-commerce website, a business can process orders, accept payments, manage shipping and logistics, and provide customer service.
-          </p>
-        </div>
-        <div class="footer-col-3">
-          <h3>Useful Links</h3>
-          <ul>
-            <li>Coupons</li>
-            <li>Blog Post</li>
-            <li>Return Policy</li>
-            <li>Join Affiliate</li>
-          </ul>
-        </div>
-
-        <div class="footer-col-4">
-          <h3>Follow us</h3>
-          <ul>
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Instagram</li>
-            <li>YouTube</li>
-          </ul>
-        </div>
-      </div>
-      <hr />
-      <p class="copyright">Copyright 2022 - SITE </p>
-    </div>
-    </div>
-
-
-    <!-- <div id="loader" class="center"></div>   -->
-
-
-    <!-- <script type="text/javascript" src="main.js"></script> -->
-
+{{ block.super }}
 
 {% endblock footer%}
-
-
-
-
-
 
 
 
