--- a/ecommerce/product/templates/product/user_order_history.html
+++ b/ecommerce/product/templates/product/user_order_history.html
@@ -54,6 +54,7 @@
             {% else %}
 
             <h2 class="title">Ordered Empty History </h2>
+            <div></div>
             
             
             {% endif %}    
