--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -34,10 +34,8 @@
     
     {% block body %}  
 
-
   <div class="container"> 
   
-            
                 <nav class="navbar navbar-expand-lg header fixed-top" >
                     <div class="container-fluid">
                     <!-- <a class="navbar-brand" href="{% url 'dashboard' %}">Home </a> -->
@@ -94,7 +92,6 @@
   
 </div>
 
-
      <div class="header-below">   
 
 
@@ -120,6 +117,11 @@
 
 
 
+
+
+
+
+
     <!-- Optional Javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -128,23 +130,68 @@
 
 
 
-
-
-
-    
     {% endblock body %}
 
 
 
 
 
-   
-
-
+    {% block footer %} 
+    
+    <div class="footer bg-dark text-center text-white" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col-1">
+            <h3>Download Our App</h3>
+            <p>
+              Download App for Android <br />
+              and ios mobile phone
+            </p>
+            <!-- <div class="app-logo">
+              <img src="images/play-store.png" alt="" />
+              <img src="images/app-store.png" alt="" />
+            </div> -->
+          </div>
+          <div class="footer-col-2">
+            <img src="{% static 'user/images/logo5.png'%}" alt="" />
+            <p>
+              An e-commerce website is one that allows people to buy and sell physical goods, services, and digital products over the internet rather than at a brick-and-mortar location. Through an e-commerce website, a business can process orders, accept payments, manage shipping and logistics, and provide customer service.
+            </p>
+          </div>
+          <div class="footer-col-3">
+            <h3>Useful Links</h3>
+            <ul>
+              <li>Coupons</li>
+              <li>Blog Post</li>
+              <li>Return Policy</li>
+              <li>Join Affiliate</li>
+            </ul>
+          </div>
+  
+          <div class="footer-col-4">
+            <h3>Follow us</h3>
+            <ul>
+              <li>Facebook</li>
+              <li>Twitter</li>
+              <li>Instagram</li>
+              <li>YouTube</li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+        <p class="copyright">Copyright 2022 - SITE </p>
+      </div>
+      </div>
   
 
+    
+    {% endblock footer %}
 
-  
+
+
+
+
+
 
   
 
