--- a/ecommerce/user/static/user/css/style.css
+++ b/ecommerce/user/static/user/css/style.css
@@ -2,6 +2,8 @@ body{
 
   font-family: 'Poppins', sans-serif;
   background-color: blueviolet;
+  position: relative;
+  height: 100%;
   
 
 }
@@ -192,6 +194,12 @@ h4 {
   color: #8a8a8a;
   font-size: 14px;
   padding: 60px 0 20px;
+  margin-bottom: 0%;
+  position: absolute;
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  
 }
 .footer p {
   color: #8a8a8a;
